# airtest-flask-app

./: .gitignore  README.md  app.py  database.db  hello.py  init_db.py  pyproject.toml  schema.sql
src/myproject/: __init__.py
templates/: create.html  edit.html  index.html  post.html
