[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "cowsay>=6.1",
    "flask>=3.1.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.rye.scripts]
dev = {cmd = "flask run", env = {"FLASK_APP" = "myproject", "FLASK_DEBUG"= "1"} }

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/myproject"]
